<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wyy.myhealth.FoodDetailsActivity" >

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/collect"
        android:icon="@drawable/shoucang"
        android:orderInCategory="101"
        android:title="@string/shoucang"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/comment"
        android:icon="@drawable/ic_menu_start_conversation"
        android:orderInCategory="103"
        android:title="@string/comment"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/call"
        android:icon="@android:drawable/ic_menu_call"
        android:orderInCategory="104"
        android:title="@string/call"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/resh"
        android:orderInCategory="105"
        android:title="@string/resh">
    </item>
    <item
        android:id="@+id/loopmap"
   		 android:orderInCategory="106"
        android:title="@string/loopmap">
    </item>

</menu>