<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wyy.myhealth.FoodDetailsActivity" >

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/share"/>
    <item
        android:id="@+id/collect"
        android:icon="@drawable/shoucang"
        android:orderInCategory="101"
        android:title="@string/shoucang">
    </item>
    <item
        android:id="@+id/resh"
        android:orderInCategory="105"
        android:title="@string/resh">
    </item>
    <item
        android:id="@+id/loopmap"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="106"
        android:title="@string/loopmap">
    </item>

</menu>