<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/fruit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/fruit" />

        <RadioButton
            android:id="@+id/vgetablis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vgetablis" />

        <RadioButton
            android:id="@+id/meat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meat" />

        <RadioButton
            android:id="@+id/stable_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stable_food" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </RadioGroup>

</FrameLayout>