<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/vatamin_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_nutrition_normal"
        android:gravity="center"
        android:text="@string/vtamin_"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/mine_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="74dp"
        android:background="@drawable/ic_nutrition_normal"
        android:gravity="center"
        android:text="@string/minerals_"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/protein_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/ic_nutrition_normal"
        android:gravity="center"
        android:text="@string/protein_"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/surgar_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_nutrition_normal"
        android:gravity="center"
        android:text="@string/surgar_"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/fat_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_nutrition_normal"
        android:gravity="center"
        android:text="@string/fat_"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/enger_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_nutrition_normal"
        android:gravity="center"
        android:text="@string/enger_"
        android:textColor="@color/white" />

</FrameLayout>