<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/head_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        layout="@layout/account_lay" />

    <EditText
        android:id="@+id/password_edit"
        style="@style/bing_edit_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/iconfont_password"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_sec"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/qq_login_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_sec"
        android:text="@string/qq_login"
        android:textColor="@color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp" >

        <TextView
            android:id="@+id/weimalogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weimalogin"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/regeit_"
            android:textColor="@color/gray"
            android:textSize="18sp" />
    </FrameLayout>

</merge>