<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/phone_edit"
        style="@style/bing_edit_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/iconfont_phone_num"
        android:ems="10"
        android:hint="@string/phone_input_hint"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/one_password_edit"
        style="@style/bing_edit_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/iconfont_password"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/tow_password_edit"
        style="@style/bing_edit_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/iconfont_password"
        android:ems="10"
        android:hint="@string/one_more_input_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/regist_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_sec"
        android:text="@string/regeit"
        android:textColor="@color/white" />

</LinearLayout>