<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            layout="@layout/money_lay" />

        <TextView
            android:id="@+id/health_junior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_junior"
            android:gravity="center"
            android:text="@string/health_junior" />

        <TextView
            android:id="@+id/health_doyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_h_doyen_disable"
            android:gravity="center"
            android:text="@string/health_doyen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/health_adviser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_adviser_disable"
            android:gravity="center"
            android:text="@string/health_adviser" />

        <TextView
            android:id="@+id/health_expert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_expert_disable"
            android:gravity="center"
            android:text="@string/health_expert" />

        <TextView
            android:id="@+id/gy_doyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_g_doyen_disable"
            android:gravity="center"
            android:text="@string/gy_doyen" />

    </LinearLayout>

</LinearLayout>