<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/boot_img_content"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/boot1" />

    <TextView
        android:id="@+id/boot_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/boot_title1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/boot_txt_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/boot_title1_content" />

    <TextView
        android:id="@+id/enter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/action_sec"
        android:drawableRight="@drawable/click_more"
        android:text="@string/start_open"
        android:textSize="20sp"
        android:visibility="gone" />

</LinearLayout>